--- a/WarehouseAPI/src/main/resources/templates/allocate/index.html
+++ b/WarehouseAPI/src/main/resources/templates/allocate/index.html
@@ -47,7 +47,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                     <td th:text="${item.ic_id}"></td>
                                     <td th:text="${item.supplier.sup_name}">1</td>
                             <div th:if="${item.pt_hold<item.pt_qty}">
-                                <td><button class="btn btn-outline-info" th:onclick="pickList([[${item.pt_id}]])">Pick List</button></td>
+                                <td><button class="btn btn-outline-info" th:onclick="pickList([[${item.pt_id}]],[[${item.pt_qty}]])">Pick List</button></td>
                             </div>
                             <div th:unless="${item.pt_hold<item.pt_qty}">
                                 <td><span class="badge badge-success">Finished Picking</span></td>
@@ -81,7 +81,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             <div class="row">
                                 <div class="form-group col-6">
                                     <label for="sup_name">Input quantity</label>
-                                    <input type="number" id="quantity" class="form-control"/> 
+                                    <input type="number" id="quantity" class="form-control"/>  <input type="hidden" id="qtyHidden" class="form-control"/>
+                                    <input type="hidden" id="maxQtyItem" class="form-control"/>
                                 </div>
                                 <div class="form-group col-6">
                                     <label for="date">Delivery Date</label>
@@ -103,11 +104,39 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
             <script>
                 $(document).ready(function () {
+                    $.ajax({
+                         type:'GET',
+                         url:`/api/locs/details/${$('#loc_code :selected').val()}`,
+                         success: function(data){
+                             console.log(data);
+                             $('#quantity').attr("placeholder", `Max: ${parseFloat(data.loc_remain)-parseFloat(data.loc_holding)}`);
+                             $('#qtyHidden').val(parseFloat(data.loc_remain)-parseFloat(data.loc_holding));
+                         }
+                      }); 
                     $('#tblWh').dataTable();
                     $('.nav-unallocate').addClass('active');
-
+                    $('#loc_code').on('change',function(){
+                      $.ajax({
+                         type:'GET',
+                         url:`/api/locs/details/${$('#loc_code :selected').val()}`,
+                         success: function(data){
+                             console.log(data);
+                             $('#quantity').attr("placeholder", `Max: ${parseFloat(data.loc_remain)-parseFloat(data.loc_holding)}`);
+                             $('#qtyHidden').val(parseFloat(data.loc_remain)-parseFloat(data.loc_holding));
+                         }
+                      }); 
+                    });
                     $('#btnAdd').click(function () {
-                        const jsObj = {
+                        console.log(parseFloat($('#qtyHidden').val())<parseFloat($('#quantity').val()));
+                        if(parseFloat($('#qtyHidden').val())<parseFloat($('#quantity').val())||parseFloat($('#maxQtyItem').val())<parseFloat($('#quantity').val())){
+                            Swal.fire({
+                                        icon: 'error',
+                                        title: 'Oops...',
+                                        text: 'Your input is too large'
+                                    });
+                                    $('#quantity').val('');
+                        }else{
+                             const jsObj = {
                             pt_id: $('#pt_id').val(),
                             loc_code: $('#loc_code :selected').val(),
                             qty: $('#quantity').val(),
@@ -140,12 +169,15 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                 }
                             }
                         });
+                        }
+                       
                     });
                 });
 
-                const pickList = (id) => {
+                const pickList = (id,qty) => {
                     console.log(id);
                     $('#pt_id').val(id);
+                    $('#maxQtyItem').val(qty);
                     $('#exampleModal').modal('show');
                 };
 
