update android good detail

--- a/BackupMobile/app/src/main/res/layout/activity_view.xml
+++ b/BackupMobile/app/src/main/res/layout/activity_view.xml
@@ -141,4 +141,14 @@
         android:text="Welcome"
         app:layout_constraintEnd_toStartOf="@+id/btnLogout"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnSubcribe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="95dp"
+        android:layout_marginBottom="203dp"
+        android:text="Sub Noti"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
