--- a/BackupMobile/app/src/main/res/layout/activity_goods_detail.xml
+++ b/BackupMobile/app/src/main/res/layout/activity_goods_detail.xml
@@ -7,8 +7,9 @@
     tools:context=".GoodsDetailActivity">
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="353dp"
-        android:layout_height="203dp"
+        android:layout_height="150dp"
         android:layout_marginStart="27dp"
         android:layout_marginTop="27dp"
         android:layout_marginEnd="27dp"
@@ -67,6 +68,7 @@
                     android:text="iPhone 11" />
 
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -77,12 +79,14 @@
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:text="Price" />
+
                 <TextView
                     android:id="@+id/tvGoodPriceDetail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="900" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -93,6 +97,7 @@
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:text="Package" />
+
                 <TextView
                     android:id="@+id/tvGoodPackDetail"
                     android:layout_width="wrap_content"
@@ -101,28 +106,85 @@
             </LinearLayout>
 
 
-
-
-
-
-
-
-
-
-
-
         </LinearLayout>
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="270dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <TextView
+            android:layout_width="10dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="No."
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Type"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="From"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="To"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Quantity"
+            android:textStyle="bold" />
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvMoveReport"
+        android:id="@+id/rvTransact"
         android:layout_width="373dp"
         android:layout_height="388dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+    <Spinner
+        android:id="@+id/spinnerType"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="9dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="14dp"
+        android:text="Filter By Type"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toStartOf="@+id/spinnerType" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
