--- a/BackupMobile/app/src/main/res/layout/goods_item.xml
+++ b/BackupMobile/app/src/main/res/layout/goods_item.xml
@@ -4,10 +4,9 @@
     android:id="@+id/layoutGood"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:layout_marginTop="20dp"
     android:layout_marginBottom="20dp"
-    >
+    android:orientation="vertical">
 
 
     <LinearLayout
@@ -17,8 +16,8 @@
 
         <ImageView
             android:id="@+id/imvGoods"
-            android:layout_width="20px"
-            android:layout_height="150px"
+            android:layout_width="100px"
+            android:layout_height="200px"
             android:layout_weight="1"
             app:srcCompat="@drawable/goods" />
 
@@ -34,14 +33,14 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="iPhone Xs Max 256GB"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/tvGoodNo"
+                android:id="@+id/tvGoodPrice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="IPX-256" />
+                android:text="7$" />
 
             <TextView
                 android:id="@+id/tvGoodUnit"
