--- a/WarehouseAPI/src/main/resources/templates/layout/layout.html
+++ b/WarehouseAPI/src/main/resources/templates/layout/layout.html
@@ -412,6 +412,26 @@
             </div>
         </div>
     </div>
+    
+    <div class="modal fade" id="wpModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+         aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Choose your workspace to start your action</h5>                   
+                </div>
+                <div class="modal-body">
+                    <select class="form-control" id="selectWs">
+                        
+                    </select>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-primary" type="button" id="btnChoose">Choose</button>
+                    
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Bootstrap core JavaScript-->
     <script th:src="@{/vendor/jquery/jquery.min.js}"></script>
@@ -431,7 +451,62 @@
     <script th:src="@{/js/demo/chart-pie-demo.js}"></script>
     <script th:src="@{/vendor/datatables/jquery.dataTables.min.js}"></script>
     <script th:src="@{/vendor/datatables/dataTables.bootstrap4.min.js}"></script>
-
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script>
+        $(document).ready(function(){
+          $.ajax({
+             type : "GET",
+             url:"/api/warehouses",
+             success:function(data){
+                 console.log(data);
+                 data.forEach(x=>{
+                    const option = `<option value="${x.wh_code}">${x.wh_desc}</option>`;
+                    $('#selectWs').append(option);
+                 });
+             }
+          });
+          $.ajax({
+              type : "GET",
+              url:"/check-workspace",
+              success:function(res){
+                  console.log(res);
+                  if(res===400){
+                    Swal.fire({
+                    icon: 'warning',
+                    title: 'Oops...',
+                    html: '<b>Selected your workspace first !</b>',
+                    button: "Select workspace"
+                }).then(function(){
+                    $('#wpModal').modal('toggle');
+                });
+                  }
+              }
+          });
+          $('#btnChoose').click(function(){
+              $('#wpModal').modal('toggle');
+              const jsObj = {
+                  wh_code : $('#selectWs :selected').val()
+              };
+              $.ajax({
+                  type: "POST",
+                  url:"/choose-workspace",
+                  contentType: "application/json",
+                  data: JSON.stringify(jsObj),
+                  success:function(res){
+                      if(res===200){
+                        Swal.fire(
+                            'Good job!',
+                            'Choose workspace success',
+                            'success'
+                        ).then(function(){
+                            window.location.reload();
+                        });  
+                      }
+                  }
+              });
+          });
+        });
+    </script>
 </body>
 
 </html>
