--- a/WarehouseAPI/src/main/resources/templates/sale/detail.html
+++ b/WarehouseAPI/src/main/resources/templates/sale/detail.html
@@ -69,16 +69,16 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                         <th>Name</th>
                                         <th>Quantity</th>
                                         <th>Picked</th>
+                                        <th>Booked</th>
                                         <th>Discount</th>
-                                        
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr th:each="item: ${details}">
-                                <div th:if="${!sale.closed}">
+                                <div th:if="${sale.closed && item.booked<item.quantity}">
                                      <td><a th:href="@{'/sale/pick-list/'+${item.good_data.goods_no}+'/'+${sale.so_id}}" class="btn btn-outline-primary">Pick List</a></td>
                                 </div>
-                                <div th:unless="${!sale.closed}">
+                                <div th:if="${sale.closed && item.booked==item.quantity}">
                                     <td><span class="badge badge-success">Picked Completed</span></td>
                                 </div>
                                        
@@ -86,6 +86,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                         <td th:text="${item.good_data.goods_name}">1</td>
                                         <td th:text="${item.quantity}">1</td>
                                         <td th:text="${item.picked}"></td>
+                                        <td th:text="${item.booked}"></td>
                                         <td th:text="${item.discount}">1</td>
                                         
                                         <!--<td><a th:href="@{/goods/update/{no}(no=${item.goods_no})}">Update</a></td>-->
@@ -155,7 +156,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     <script>
                         $(document).ready(function () {
                             $('.nav-sale').addClass('active');
-                            $('#tblWh').dataTable();
+                           
                             $('#new-list').click(function () {
                                 $('#exampleModal').modal('show');
                             });
