--- a/WarehouseAPI/src/main/resources/templates/layout/layout.html
+++ b/WarehouseAPI/src/main/resources/templates/layout/layout.html
@@ -80,6 +80,11 @@
                         <i class="fa-solid fa-boxes-stacked"></i>
                         <span>Unallocate</span></a>
                 </li>
+                 <li class="nav-item nav-unqualified">
+                    <a class="nav-link nav-unqualified" th:href="@{/unqualified}">
+                        <i class="fa-solid fa-recycle"></i>
+                        <span>Unqualified</span></a>
+                </li>
                 <hr class="sidebar-divider my-0">
                 <li class="nav-item nav-qc">
                     <a class="nav-link nav-qc" th:href="@{/qc}">
