--- a/WarehouseAPI/src/main/resources/templates/unqualified/index.html
+++ b/WarehouseAPI/src/main/resources/templates/unqualified/index.html
@@ -42,26 +42,60 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <td th:text="${item.so_id}">To Location</td>
             <td th:text="${item.quantity}">From Location</td>
             <td th:text="${item.note}"></td>
-          <div th:if="${item.status==0}">
+          <div th:if="${item.quantity>item.action_qty}">
               <td>
-                  <button class="btn btn-outline-primary">Pending</button>
+                  <button class="btn btn-outline-primary" th:onclick="handleItem([[${item.id}]])">Pending</button>
               </td>
           </div>
-          <div th:if="${item.status==1}">
+           <div th:unless="${item.quantity>item.action_qty}">
               <td>
-                  <span class="badge badge-success">Pending</span>
+                  <span class="badge badge-success">Completed</span>
               </td>
           </div>
-          <div th:if="${item.status==-1}">
-              <td>
-                  <span class="badge badge-danger">Disposed</span>
-              </td>
-          </div>
+         
 
 
           </tr>
           </tbody>
         </table>
+           <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Enter quantity and note</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="row">                               
+                                <div class="form-group col-6">
+                                    <label for="wh_desc">Quantity</label>
+                                    <input id="rp_qty" class="form-control"/>
+                                    <input type="hidden" id="un_id"/>
+                                </div>
+                            </div>
+                            <div class="row">
+                                 <div class="form-group col-4">
+                                    <label class="form-check-label" for="wh_editStatus">Recycle</label>
+                                    <div class="form-check form-switch">
+                                        <input type="checkbox" id="rp_recycle" class="form-check-input" style="cursor:pointer;"/>
+                            </div>
+                                 </div>
+                            <div class="row">
+                                <div class="form-group col-12">
+                                    <label for="wh_cmt">Note</label>
+                                    <textarea class="form-control" id="rp_note">
+                                        
+                                    </textarea>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-danger" id="btnSave">Save changes</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
       </div>
     </div>
   </div>
@@ -74,6 +108,39 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     $(document).ready(function () {
       $('.nav-unqualified').addClass('active');
       $('#tblWh').dataTable();
+      
+    });
+    
+    const handleItem = (id) =>{
+        $('#exampleModal').modal('show');
+        $('#un_id').val(id);
+    };
+    
+    $('#btnSave').click(function(){
+       const jsObj = {
+           id : $('#un_id').val(),
+           qty: $('#rp_qty').val(),
+           note:$('#rp_note').val(),
+           status:$('#rp_recycle').prop("checked") ? 1 : -1
+       };
+       console.log(jsObj);
+       $.ajax({
+            url: '/unqualified/handle',
+            type: 'POST',
+            contentType: "application/json",
+            data: JSON.stringify(jsObj),
+            success:function(res){
+                if(res===200){
+                     Swal.fire(
+                       'Good job!',
+                       'Action success',
+                       'success'
+                    ).then(function () {
+                       window.location.reload();
+                   });
+                }
+            }
+       });
     });
   </script>
 </div>
