--- a/BackupMobile/app/src/main/res/layout/activity_view.xml
+++ b/BackupMobile/app/src/main/res/layout/activity_view.xml
@@ -149,6 +149,7 @@
         android:layout_marginEnd="95dp"
         android:layout_marginBottom="203dp"
         android:text="Sub Noti"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
