--- a/WarehouseAPI/src/main/resources/templates/inventory/index.html
+++ b/WarehouseAPI/src/main/resources/templates/inventory/index.html
@@ -32,6 +32,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                     <th>Accepted</th>
                                     <th>Status</th>
                                     <th>Supplier</th>
+                                    <th>Batch No</th>
                                     <th>Location</th>
                                     
                                 </tr>
@@ -51,6 +52,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                 <td><span class="badge badge-info">Wait for Qc Check</span></td>
                             </div>
                             <td th:text="${item.supplier.sup_name}">1</td>
+                            <td th:text="${item.patch_no}"></td>
                             <td <td th:text="${item.loc_code}">1</td>
                             <!--<td><a th:href="@{/goods/update/{no}(no=${item.goods_no})}">Update</a></td>-->
                             </tr>
