--- a/WarehouseAPI/src/main/resources/templates/transaction/index.html
+++ b/WarehouseAPI/src/main/resources/templates/transaction/index.html
@@ -27,11 +27,11 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <table class="table table-bordered" id="tblWh" width="100%" cellspacing="0">
           <thead>
           <tr>
-            <th>Transaction Id</th>
+            <th>No</th>
             <th>Type</th>
             <th>Goods Name</th>
-            <th>From Location</th>
-            <th>To Location</th>
+            <th>From</th>
+            <th>To</th>
             <th>Quantity</th>
           </tr>
           </thead>
