--- a/BackupMobile/app/src/main/res/layout/activity_view.xml
+++ b/BackupMobile/app/src/main/res/layout/activity_view.xml
@@ -24,12 +24,14 @@
                 android:text="Welcome Hien"
                 android:textColor="#FFFFFF"
                 android:textSize="22sp" />
+
             <ImageView
+                android:id="@+id/imgLogout"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_alignLeft="@+id/txtUser"
                 android:layout_marginLeft="170dp"
-                android:src="@drawable/logout"
-                android:layout_width="30dp"
-                android:layout_height="30dp" />
+                android:src="@drawable/logout" />
             <ImageView
                 android:id="@+id/imgPerson"
                 android:layout_alignParentRight="true"
