--- a/BackupMobile/app/src/main/res/layout/goods_item.xml
+++ b/BackupMobile/app/src/main/res/layout/goods_item.xml
@@ -14,15 +14,15 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imvGoods"
-            android:layout_width="100px"
-            android:layout_height="200px"
+            android:layout_width="150px"
+            android:layout_height="150px"
             android:layout_weight="1"
-            app:srcCompat="@drawable/goods" />
+            android:src="@drawable/goods" />
 
         <LinearLayout
-            android:layout_width="175px"
+            android:layout_width="200dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="vertical">
