--- a/WarehouseAPI/src/main/resources/templates/layout/layout.html
+++ b/WarehouseAPI/src/main/resources/templates/layout/layout.html
@@ -47,8 +47,8 @@
 
                 <!-- Divider -->
                 <hr class="sidebar-divider my-0">
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/home/test-layout}">
+                <li class="nav-item nav-dash">
+                    <a class="nav-link nav-dash" th:href="@{/}">
                         <i class="fas fa-fw fa-tachometer-alt"></i>
                         <span>Dashboard</span></a>
                 </li> 
